--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  background-color: #0a090b;
+  width: 100vw;
+  height: 100vh; /*adjust this to 100% as content is added*/
 }
 
 .App-logo {
