--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -32,6 +32,8 @@
   align-items: center;
   height: 70%;
   margin-top: 0;
+  margin-right: 15px;
+  margin-left: 15px;
   padding-top: 6px;
   width: 45px;
   background-color: #51a49b;
@@ -55,50 +57,7 @@ div.logoContainer svg > g > rect {
   height: 60%;
   width:1px;
   border-left: 1px solid rgb(90, 105, 110);
-}
-
-.navLeft button {
-  display: flex;
-  align-items: center;
-  height: 80%;
-  width: 60%;
-  padding: 0;
-  background-color: rgb(48, 45, 57);
-  border-radius: 10px;
-  border: 1px solid rgb(90, 105, 110);
-}
-
-.navLeft button:hover{
-  cursor: pointer;
-  background-color: rgb(51, 48, 60)
-}
-
-.navLeft button:hover .buttonText {
-  font-size: 20.25px;
-}
-
-.navLeft div.calIconContainer {
-  height: 100%;
-}
-
-.navLeft div.calIconContainer svg > g > path,
-.navLeft div.calIconContainer svg > g > line,
-.navLeft div.calIconContainer svg > g > polyline,
-.navLeft div.calIconContainer svg>g>rect {
-  stroke: rgb(48, 45, 57);
-  fill: rgb(244, 252, 0)
-}
-
-.navLeft div.calIconContainer svg {
-  padding: 7px;
-}
-
-.navLeft .buttonText {
-  color: rgb(255, 255, 255);
-  text-align: left;
-  padding-left: 10%;
-  width: 100%;
-  font-size: 20px;
+  margin-right: 15px;
 }
 
 /* Middle Nav section */
