--- a/src/Components/SlideList/ListItem/ListItem.module.css
+++ b/src/Components/SlideList/ListItem/ListItem.module.css
@@ -1,6 +1,29 @@
 .listItem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 225px;
   height: 120px;
-  background-color: white;
+  background-color: rgb(48, 45, 57, .9);
   margin-right: 5px;
+  border: 1px solid rgb(90, 105, 110, .8);
+  border-radius: 15px;
+  padding: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
+
+.listItem span {
+  display: block;
+  width: 100%;
+  margin: 2px;
+}
+
+.listItem span.date,
+.listItem span.time {
+  font-weight: 600;
+}
+
+/* .listItem span. */
