--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -36,9 +36,9 @@
   margin-left: 15px;
   padding-top: 6px;
   width: 45px;
-  background-color: rgb(81, 164, 155);
+  background-color: var(--clr-500);
   border-radius: 13px;
-  border: 2px solid rgb(212, 42, 20);
+  border: 2px solid var(--clr-700);
   
 }
 
@@ -56,7 +56,7 @@ div.logoContainer svg > g > rect {
 .navLeft div.divider {
   height: 60%;
   width:1px;
-  border-left: 1px solid rgb(90, 105, 110);
+  border-left: 1px solid var(--clr-600);
   margin-right: 15px;
 }
 
@@ -71,7 +71,7 @@ div.logoContainer svg > g > rect {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: rgb(190, 188, 200);
+  color: var(--clr-200);
   height: 100%;
   width: 100%;
   margin: 0;
@@ -89,19 +89,19 @@ div.logoContainer svg > g > rect {
 }
 
 .navMid ul li:hover {
-  color: rgb(150, 145, 160);
+  color: var(--clr-400);
   transition: all 500ms ease 0s;
   cursor: pointer;
 }
 
 .navMid ul li.active {
-  color: rgb(255, 255, 255);
-  border-bottom: 5px solid rgb(244, 252, 0);
+  color: var(--clr-100);
+  border-bottom: 5px solid var(--clr-300);
   font-weight: 600;
 }
 
 .navMid ul li.active:hover{
-  color: rgb(150, 145, 160);
+  color: var(--clr-400);
 }
 
 /* Right Nav section */
@@ -125,18 +125,18 @@ div.logoContainer svg > g > rect {
 }
 
 .navRight div.leaderBoardIconContainer {
-  background-color: rgb(244,252, 0);
-  border: 2px solid rgb(212, 42, 20);
+  background-color: var(--clr-300);
+  border: 2px solid var(--clr-700);
   border-radius: 100%;
   width:80%
 }
 
 .navRight div.leaderBoardIconContainer svg {
-  stroke: rgb(212, 42, 20);
+  stroke: var(--clr-700);
 }
 
 .navRight span.leaderBoardText {
-  color: rgb(255,255,255);
+  color: var(--clr-100);
   text-align: center;
   font-size: 12px;
   font-weight: 600;
