--- a/src/Components/SlideList/SlideList.module.css
+++ b/src/Components/SlideList/SlideList.module.css
@@ -23,7 +23,7 @@
   margin: auto;
   width: 50px;
   height: 100%;
-  background-color: rgb(22, 22, 22, 0.5);
+  background-color: var(--clr-1050);
   z-index: 99;
   cursor: pointer;
 }
