--- a/src/Components/TeamShowcase/TeamShowcase.module.css
+++ b/src/Components/TeamShowcase/TeamShowcase.module.css
@@ -1,3 +1,16 @@
 .showcaseContainer{
   width: 50%;
 }
+
+.teamList {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.teamList .team {
+  height: 256px;
+  background-color: var(--clr-100);
+  flex: 0 32%;
+  margin-bottom: 2%;
+}
